# Refract

./: .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  setup.cfg
schemas/: mcp_apify_schemas.json  mcp_calendar_schemas.json  mcp_canva_schemas.json  mcp_enterprise_schemas.json  mcp_fixtures.json  mcp_real_schemas.json  sample_app.js  sample_app.ts
src/: ast_extractor.py  cache_injector.py  mcp_optimizer.py  mcp_signal_check.py  refract_cli.py  refract_install.py  refract_proxy.py  refract_server.py  refract_status.py  semantic_router.py  token_counter.py  ts_extractor.py
tests/: test_blast_radius.py  test_cache.py  test_cli.py  test_extractor.py  test_http_transport.py  test_install.py  test_llm.py  test_mcp.py  test_proxy.py  test_proxy_mount.py  test_refract_server.py  test_refract_status.py  test_security_surface.py  test_semantic_router.py  test_sse_transport.py  test_stats.py  test_tags.py  test_ts_extractor.py
